--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -7870,3 +7870,75 @@ crontasks +=
             , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
           ]
         }
+
+        crontasks +=
+        {
+          instanceId = "LOAD_SPARK_FT_CRM_OUTPUT_ABONNEMENT",
+          cron = "0 0 0 25,26,27,28 * ?",
+          configFile = "/PROD/CONF/FT_CRM_OUTPUT_ABONNEMENT/load-spark-ft-crm-ouput-abonnement.conf",
+          taskType = "BATCH",
+          taskQueue = "compute",
+          taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+          timeout = "55 minutes"
+          extraTaskParams : [
+            {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+            , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+            , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+            , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+            , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+            , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+            , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+            , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+            , {"param" : "--conf spark.network.timeout=360s"}
+            , {"param" : "--conf spark.ui.port=50999"}
+            , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          ]
+        }
+
+        crontasks +=
+        {
+          instanceId = "LOAD_SPARK_FT_CRM_OUTPUT_B2B",
+          cron = "0 0 0 25,26,27,28 * ?",
+          configFile = "/PROD/CONF/FT_CRM_OUTPUT_B2B/load-spark-ft-crm-ouput-b2b.conf",
+          taskType = "BATCH",
+          taskQueue = "compute",
+          taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+          timeout = "55 minutes"
+          extraTaskParams : [
+            {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+            , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+            , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+            , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+            , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+            , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+            , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+            , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+            , {"param" : "--conf spark.network.timeout=360s"}
+            , {"param" : "--conf spark.ui.port=51000"}
+            , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          ]
+        }
+
+        crontasks +=
+        {
+          instanceId = "LOAD_SPARK_FT_CRM_OUTPUT_B2C",
+          cron = "0 0 0 25,26,27,28 * ?",
+          configFile = "/PROD/CONF/FT_CRM_OUTPUT_B2C/load-spark-ft-crm-ouput-b2c.conf",
+          taskType = "BATCH",
+          taskQueue = "compute",
+          taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+          timeout = "55 minutes"
+          extraTaskParams : [
+            {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+            , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+            , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+            , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+            , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+            , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+            , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+            , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+            , {"param" : "--conf spark.network.timeout=360s"}
+            , {"param" : "--conf spark.ui.port=51001"}
+            , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          ]
+        }
