--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-weekly.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-weekly.conf
@@ -12,7 +12,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_KPI_MKT_V2_REG_WEEKLY"
+flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_WEEKLY"
 
 flux.has-date-processing = true
 
@@ -46,5 +46,5 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and nb_jours=7,'OK','NOK') from (select count(*) is_ok from tmp.SPARK_KPIS_REG5 where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY' )a,(select count(distinct processing_date) nb_jours from tmp.SPARK_KPIS_REG5 where processing_date between date_sub('###SLICE_VALUE###',6) and  '###SLICE_VALUE###' AND  granularite='DAILY')b"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and nb_jours=7,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY' )a,(select count(distinct processing_date) nb_jours from AGG.SPARK_KPIS_DG_TMP where processing_date between date_sub('###SLICE_VALUE###',6) and  '###SLICE_VALUE###' AND  granularite='DAILY')b"
 flux.exec-queries += "/DATALAB/SCRIPTS/compute_and_insert_into_spark_kpis_reg_weekly_log.hql"
