--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -8506,14 +8506,14 @@ crontasks +=
   crontasks +=
   {
     instanceId = "LOAD_EXPORT_PICO_CREDIT_MONTHLY",
-    cron = "0 0 */2 * * ?",
+    cron = "0 0 22 * * ?",
     configFile = "/PROD/CONF/EXPORT/PICO_CREDIT/load-export-pico-credit-month.conf",
     taskType = "BATCH",
     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "120 minutes"
+    timeout = "180 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 4 --num-executors 8 --driver-memory 2G --executor-memory 5G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
