--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
@@ -17,7 +17,7 @@ flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_FINAL"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -45
+flux.slice-begin-value = -110
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -46,5 +46,5 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and dep>0,'OK','NOK') from (select count(*) is_ok from MON.SPARK_KPIS_REG_FINAL2 where processing_date='###SLICE_VALUE###'  )a,(select COUNT(*) dep from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###')b"
-flux.exec-queries += "/DATALAB/SCRIPTS/compute_and_insert_agregations_final.hql"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and dep>0,'OK','NOK') from (select count(*) is_ok from MON.SPARK_KPIS_REG_FINAL where processing_date='###SLICE_VALUE###'  )a,(select COUNT(*) dep from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###')b"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_final.hql"
