--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily-supp-reg-inconnue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily-supp-reg-inconnue.conf
@@ -12,12 +12,12 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_WEEKLY"
+flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_SUPP_REG_INCONNUE"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -77
+flux.slice-begin-value = -142
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -46,5 +46,5 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and nb_jours=7,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY' )a,(select count(distinct processing_date) nb_jours from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date between date_sub('###SLICE_VALUE###',6) and  '###SLICE_VALUE###' AND  granularite='DAILY')b"
-flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_weekly.hql"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and dep>0,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###'  )a,(select count(*) dep from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###')b"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_daily_supp_reg_inconnue.hql"
