--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-commercial-region-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-commercial-region-final.conf
@@ -12,7 +12,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_MONTHLY"
+flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_IN_COMMERCIAL_REGION_FINAL"
 
 flux.has-date-processing = true
 
@@ -46,5 +46,5 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and nb_jours=2,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='MONTHLY' )a,(select count(distinct processing_date) nb_jours from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date between date_sub('###SLICE_VALUE###',1) and  '###SLICE_VALUE###' AND  granularite='DAILY')b"
-flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_monthly.hql"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and dep>0,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_FINAL where processing_date='###SLICE_VALUE###' and GRANULARITE_REG='COMMERCIAL_REGION'  )a,(select COUNT(*) dep from AGG.SPARK_KPIS_DG_FINAL where processing_date='###SLICE_VALUE###' and GRANULARITE_REG='ADMINISTRATIVE_REGION')b"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_in_commercial_region_final.hql"
