--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1044,3 +1044,20 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_KPIS_CEO_DASHBOARD",
+    cron = "0 10-50/20 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-kpis-ceo-dashboard-daily.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
