--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -8,7 +8,7 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 flux.name = "LOAD_SPARK_IT_BDI_TABLE"
 flux.has-date-processing = true
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -10
+flux.slice-begin-value = -30
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -18,16 +18,16 @@ flux.slice-state-query="""
 select
     if(count(*)=11,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 10) and current_date
-    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 10) and current_date)
+where datecode between date_sub(current_date, 30) and current_date
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 30) and current_date)
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 10) and current_date
-    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 10) and current_date)
+where datecode between date_sub(current_date, 30) and current_date
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 30) and current_date)
 """
 flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
@@ -60,6 +60,8 @@ flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_bdi3"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_LIGNE_FLOTTE2"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_IT_BDI_FULL_2A"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_IT_BDI_FULL_2B"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_gap_bdi_hlr.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_gap_into_tt_zsmart.hql"
@@ -76,7 +78,9 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/remove_from_tt_bdi_tt_stk_pers
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_from_tt_bdi2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_1_from_tt_bdi3.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_ligne_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_morale.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_it_bdi_full_2a.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_it_bdi_full_2b.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_ligne_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_full1.hql"
